--- a/.gitignore
+++ b/.gitignore
@@ -72,5 +72,8 @@ Saved/*
 Intermediate/*
 Plugins/*/Intermediate/*
 
+# DS_Store files
+*.DS_Store
+
 # Cache files for the editor to use
 DerivedDataCache/*
