disable air movements during throw

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,13 +78,16 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1910
 NewWindowHeight=986
 MultipleInstancePositions=(X=1,Y=1)
-LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/Template_Default
+LastLevel=/Game/Maps/Maptest
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Lego.Lego
+OpenAssetsAtExit=/Game/Blueprints/Space_Parasite.Space_Parasite
+OpenAssetsAtExit=/Game/Blueprints/Baril.Baril
+OpenAssetsAtExit=/Game/Blueprints/Spawner.Spawner
 
 [DetailCategories]
 PlayerStart.TransformCommon=True
@@ -1162,31 +1165,87 @@ MaterialExpressionScalarParameter.General=True
 MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
 MaterialExpressionScalarParameter.MaterialExpression=True
 MaterialExpressionScalarParameter.CustomPrimitiveData=True
+Lego_C.Default=True
+Lego_C.Tick=True
+Lego_C.Input=True
+Lego_C.Pawn=True
+Lego_C.Character=True
+Lego_C.Camera=True
+Lego_C.Replication=True
+Lego_C.Rendering=True
+Lego_C.Collision=True
+Lego_C.Actor=True
+BP_EndPipe_C.TransformCommon=True
+BP_EndPipe_C.Rendering=True
+BP_EndPipe_C.Replication=True
+BP_EndPipe_C.Collision=True
+BP_EndPipe_C.Input=True
+BP_EndPipe_C.Actor=True
+Lego_C.TransformCommon=True
+Lego_C.Sprite=True
+Lego_C.Physics=True
+Lego_C.Lighting=True
+Lego_C.Navigation=True
+Lego_C.VirtualTexture=True
+Lego_C.Tags=True
+Lego_C.Activation=True
+Lego_C.Cooking=True
+Lego_C.Character Movement (General Settings)=True
+Lego_C.Character Movement: Walking=True
+Lego_C.Character Movement: Jumping / Falling=True
+Lego_C.Character Movement (Networking)=True
+Lego_C.Character Movement: Swimming=True
+Lego_C.Character Movement: Flying=True
+Lego_C.Character Movement: Custom Movement=True
+Lego_C.Character Movement (Rotation Settings)=True
+Lego_C.Character Movement: Physics Interaction=True
+Lego_C.Character Movement=True
+Lego_C.Character Movement: Avoidance=True
+Lego_C.RootMotion=True
+Lego_C.Character Movement: NavMesh Movement=True
+Lego_C.NavMovement=True
+Lego_C.Velocity=True
+Lego_C.PlanarMovement=True
+Lego_C.MovementComponent=True
+Lego_C.Shape=True
+Lego_C.Materials=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.World=True
+WorldSettings.Physics=True
+WorldSettings.Broadphase=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.Tick=True
+PropertyWrapper.Events=True
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Maptest
-MRUItem1=/Game/Blueprints/jj
+MRUItem0=/Game/Blueprints/Spawner
+MRUItem1=/Game/Blueprints/baril
 MRUItem2=/Game/Blueprints/Space_Parasite
-MRUItem3=/Game/Maps/Main
-MRUItem4=/Game/Blueprints/Scuzli
-MRUItem5=/Game/Blueprints/Checkpoint
-MRUItem6=/Game/Assets/Textures/plateform_3
-MRUItem7=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem8=/Game/Assets/Textures/plateform_2
-MRUItem9=/Game/Blueprints/baril
-MRUItem10=/Game/Blueprints/Spawner
-MRUItem11=/Game/Blueprints/BP_GameModelBase
-MRUItem12=/Game/Assets/Textures/plateform
-MRUItem13=/Game/Blueprints/Slingshot
-MRUItem14=/Engine/BasicShapes/Cube
-MRUItem15=/Game/Blueprints/Arcane
-MRUItem16=/Game/Blueprints/Jumper
-MRUItem17=/Game/Blueprints/BP_Player_Base
-MRUItem18=/Game/Blueprints/playercontroller
-MRUItem19=/Game/Blueprints/player
+MRUItem3=/Game/Maps/Maptest
+MRUItem4=/Game/Blueprints/Lego
+MRUItem5=/Game/Blueprints/jj
+MRUItem6=/Game/Maps/Main
+MRUItem7=/Game/Blueprints/Scuzli
+MRUItem8=/Game/Blueprints/Checkpoint
+MRUItem9=/Game/Assets/Textures/plateform_3
+MRUItem10=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem11=/Game/Assets/Textures/plateform_2
+MRUItem12=/Game/Blueprints/BP_GameModelBase
+MRUItem13=/Game/Assets/Textures/plateform
+MRUItem14=/Game/Blueprints/Slingshot
+MRUItem15=/Engine/BasicShapes/Cube
+MRUItem16=/Game/Blueprints/Arcane
+MRUItem17=/Game/Blueprints/Jumper
+MRUItem18=/Game/Blueprints/BP_Player_Base
+MRUItem19=/Game/Blueprints/playercontroller
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1352,17 +1411,17 @@ TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRu
 TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.jump,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.jump,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.jump,
-CapsuleComponent=
+CapsuleComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 PlayerStart=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 Arcane_C=
 K2Node_VariableGet=CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SphereComponent.Physics.ConstraintsGroup,
 BP_Player_Base_C=
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 MovementComponent=
-Space_Parasite_C=BoxComponent.Physics.ConstraintsGroup,
+Space_Parasite_C=
 BoxComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Physics.ConstraintsGroup,
 SphereComponent=CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SphereComponent.Physics.ConstraintsGroup,
-SceneComponent=CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SphereComponent.Physics.ConstraintsGroup,
+SceneComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 playercontroller_C=BoxComponent.Physics.ConstraintsGroup,
 BP_Sky_Sphere_C=BoxComponent.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
 CameraComponent=CameraComponent.PostProcess.Lens,
@@ -1380,10 +1439,11 @@ CharacterMovementComponent=
 Slingshot_C=CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 PropertyWrapper=BoxComponent.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
 ff_C=
-Lego_C=CameraComponent.PostProcess.Lens,
-Scuzli_C=CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SphereComponent.Physics.ConstraintsGroup,
+Lego_C=CameraComponent.PostProcess.Lens,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,
+Scuzli_C=CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SphereComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,
 BillboardComponent=
 jj_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
+BP_EndPipe_C=CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SphereComponent.Physics.ConstraintsGroup,
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -1419,15 +1479,15 @@ PrimitiveComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance\"
 SceneComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance\" "
 ActorComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance\" "
 BoxComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance\" "
-CharacterMovementComponent=
+CharacterMovementComponent="\"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" "
 PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" "
 NavMovementComponent="\"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" "
 MovementComponent="\"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" "
 playercontroller_C=
 PlayerController=
 Controller=
-StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 FloatingPawnMovement="\"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
 ProjectPackagingSettings="\"Object.Packaging.IniKeyBlacklist\" "
@@ -1528,6 +1588,8 @@ bUseUnsortedMenus=False
 bShowGrid=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Lego.Lego;
+RecentlyPlaced=/Game/Blueprints/Baril.Baril;
 RecentlyPlaced=/Game/Blueprints/Scuzli.Scuzli;
 RecentlyPlaced=/Game/Blueprints/Slingshot.Slingshot;
 RecentlyPlaced=/Game/Meshes/StaticMesh.StaticMesh;
@@ -1540,7 +1602,6 @@ RecentlyPlaced=/Game/Blueprints/Jumper.Jumper;
 RecentlyPlaced=/Game/Assets/Textures/plateform.plateform;
 RecentlyPlaced=/Game/Blueprints/Space_Parasite.Space_Parasite;
 RecentlyPlaced=/Game/Blueprints/actest.actest;
-RecentlyPlaced=/Game/Blueprints/Lego.Lego;
 RecentlyPlaced=/Game/Blueprints/BP_Player_Base.BP_Player_Base;
 
 [AssetEditorToolkitTabLocation]
@@ -1652,7 +1713,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=52.800 Y=28.800
-WindowSize=X=1307.200 Y=747.200
+WindowSize=X=1308.800 Y=748.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
