restart when hit

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -88,6 +88,7 @@ OpenAssetsAtExit=/Game/Blueprints/Lego.Lego
 OpenAssetsAtExit=/Game/Blueprints/Space_Parasite.Space_Parasite
 OpenAssetsAtExit=/Game/Blueprints/Baril.Baril
 OpenAssetsAtExit=/Game/Blueprints/Spawner.Spawner
+OpenAssetsAtExit=/Game/Maps/Maptest.Maptest:PersistentLevel.Maptest
 
 [DetailCategories]
 PlayerStart.TransformCommon=True
@@ -1221,6 +1222,10 @@ WorldSettings.Audio=True
 WorldSettings.LODSystem=True
 WorldSettings.Tick=True
 PropertyWrapper.Events=True
+Maptest_C.Tick=True
+Maptest_C.Replication=True
+Maptest_C.Actor=True
+Maptest_C.Input=True
 
 [MessageLog]
 LastLogListing=BlueprintLog
@@ -1229,8 +1234,8 @@ LastLogListing=BlueprintLog
 MRUItem0=/Game/Blueprints/Spawner
 MRUItem1=/Game/Blueprints/baril
 MRUItem2=/Game/Blueprints/Space_Parasite
-MRUItem3=/Game/Maps/Maptest
-MRUItem4=/Game/Blueprints/Lego
+MRUItem3=/Game/Blueprints/Lego
+MRUItem4=/Game/Maps/Maptest
 MRUItem5=/Game/Blueprints/jj
 MRUItem6=/Game/Maps/Main
 MRUItem7=/Game/Blueprints/Scuzli
@@ -1476,8 +1481,8 @@ NiagaraEditorSettings="\"Object.Niagara.GraphCreationShortcuts\" \"Object.Niagar
 CapsuleComponent=
 ShapeComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance\" "
+SceneComponent=
+ActorComponent=
 BoxComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance\" "
 CharacterMovementComponent="\"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" "
 PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" "
@@ -1713,8 +1718,8 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=52.800 Y=28.800
-WindowSize=X=1308.800 Y=748.800
-InitiallyMaximized=True
+WindowSize=X=1310.400 Y=750.400
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
