add alien and restart on the tutorial

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
+GameDefaultMap=/Game/Maps/Maptest.Maptest
 GlobalDefaultGameMode=/Game/Blueprints/BP_GameModelBase.BP_GameModelBase_C
+EditorStartupMap=/Game/Maps/Maptest.Maptest
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
