--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=B81F9F6D43E67E1D19F4F9812DD1A4E8
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Development
+
