--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,6 +17,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure=False
+r.SkinCache.CompileShaders=True
+r.RayTracing=True
+r.RayTracing.UseTextureLod=True
 
 [/Script/Engine.PhysicsSettings]
 bEnable2DPhysics=True
