--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Maptest.Maptest
+GameDefaultMap=/Game/Menus/MainMenuLevel.MainMenuLevel
 GlobalDefaultGameMode=/Game/Blueprints/BP_GameModelBase.BP_GameModelBase_C
-EditorStartupMap=/Game/Maps/Maptest.Maptest
+EditorStartupMap=/Game/Menus/MainMenuLevel.MainMenuLevel
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
