--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -83,6 +83,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +ActionMappings=(ActionName="Reset",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +ActionMappings=(ActionName="Reset",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Left)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=A)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Right)
