wall jumper basics

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Menus/MainMenuLevel.MainMenuLevel
 GlobalDefaultGameMode=/Game/Blueprints/BP_GameModelBase.BP_GameModelBase_C
 EditorStartupMap=/Game/Menus/MainMenuLevel.MainMenuLevel
+ServerDefaultMap=/Game/Menus/MainMenuLevel.MainMenuLevel
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
