--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,11 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Menus/MainMenuLevel.MainMenuLevel
+GameDefaultMap=/Game/Scenes/MainMenuLevel.MainMenuLevel
 GlobalDefaultGameMode=/Game/Blueprints/BP_GameModelBase.BP_GameModelBase_C
-EditorStartupMap=/Game/Menus/MainMenuLevel.MainMenuLevel
+EditorStartupMap=/Game/Scenes/MainMenuLevel.MainMenuLevel
 ServerDefaultMap=/Game/Menus/MainMenuLevel.MainMenuLevel
+TransitionMap=None
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
