--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,6 +19,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure=False
+r.Vsync=1
 
 [/Script/Engine.PhysicsSettings]
 bEnable2DPhysics=True
