--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -20,6 +20,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure=False
 r.Vsync=1
+r.Mobile.AntiAliasing=1
 
 [/Script/Engine.PhysicsSettings]
 bEnable2DPhysics=True
@@ -93,4 +94,18 @@ UIScaleCurve=(EditorCurveData=(Keys=((Time=480.000000,Value=0.444000),(Time=720.
 bAllowHighDPIInGameMode=False
 DesignScreenSize=(X=1920,Y=1080)
 bLoadWidgetsOnDedicatedServer=True
+
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=28BFBA7E4F36BDBA08D6CCBEC1A0332E
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
 
