--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -69,6 +69,11 @@ bUseMouseForTouch=False
 bEnableMouseSmoothing=True
 bEnableFOVScaling=True
 bCaptureMouseOnLaunch=True
+bEnableLegacyInputScales=True
+bEnableMotionControls=True
+bFilterInputByPlatformUser=False
+bShouldFlushPressedKeysOnViewportFocusLost=True
+bEnableDynamicComponentInputBinding=True
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 bEnableGestureRecognizer=False
@@ -98,8 +103,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="UP&DOWN",Scale=8.000000,Key=S)
 +AxisMappings=(AxisName="UP&DOWN",Scale=-8.000000,Key=Up)
 +AxisMappings=(AxisName="UP&DOWN",Scale=8.000000,Key=Down)
-DefaultPlayerInputClass=/Script/Engine.PlayerInput
-DefaultInputComponentClass=/Script/Engine.InputComponent
+DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
+DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
